@@ -194,6 +194,10 @@ wubi (9.04) UNRELEASED; urgency=low
   * Make sure that arguments are properly quoted (thanks Colin Watson!)
   * Before deleting the temp directory, make sure to move out of there
     (LP: #341607)
+  * Avoid removing the bcd boot menu multiple times (LP: #354882)
+  * Remove wubildr files from each drive
+  * Check that file extraction from ISO is successful before trying to
+    parse the file (LP: #351966)
 
   [ Hampus Wessman ]
   * Added a new metalink parser
@@ -223,4 +227,4 @@ wubi (9.04) UNRELEASED; urgency=low
     Ubuntu Linux.
   * Removed an erroneous closing parentheses in the use_cd check.
 
- -- Agostino Russo <agostino.russo@gmail.com>  Sat, 04 Apr 2009 20:10:55 +0100
+ -- Agostino Russo <agostino.russo@gmail.com>  Sun, 05 Apr 2009 02:07:04 +0100
